--- a/NLP2/Lab01/01 code your own RNN.ipynb
+++ b/NLP2/Lab01/01 code your own RNN.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 238,
    "id": "f26c411e-1cd5-4a1c-9b3d-de16e26db901",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 239,
    "id": "42b598f9-36b5-43e3-bb25-488b0fb53aac",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
      "output_type": "stream",
      "text": [
       "Found cached dataset imdb (/home/pili/.cache/huggingface/datasets/imdb/plain_text/1.0.0/d613c88cf8fa3bab83b4ded3713f1f74830d1100e171db75bbddb80b3345c9c0)\n",
-      "100%|██████████| 3/3 [00:00<00:00, 533.51it/s]\n",
+      "100%|██████████| 3/3 [00:00<00:00, 845.68it/s]\n",
       "Loading cached split indices for dataset at /home/pili/.cache/huggingface/datasets/imdb/plain_text/1.0.0/d613c88cf8fa3bab83b4ded3713f1f74830d1100e171db75bbddb80b3345c9c0/cache-5f37fd0866e4f89f.arrow and /home/pili/.cache/huggingface/datasets/imdb/plain_text/1.0.0/d613c88cf8fa3bab83b4ded3713f1f74830d1100e171db75bbddb80b3345c9c0/cache-dd5732a0e6ac784c.arrow\n"
      ]
     },
@@ -64,7 +64,7 @@
        "((20000, 2), (5000, 2), (25000, 2))"
       ]
      },
-     "execution_count": 294,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 240,
    "id": "152b550c",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 20000/20000 [00:01<00:00, 16768.73it/s]\n"
+      "100%|██████████| 20000/20000 [00:01<00:00, 16951.62it/s]\n"
      ]
     }
    ],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 241,
    "id": "e495aa0c",
    "metadata": {},
    "outputs": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 242,
    "id": "3f6fc4eb-2f25-43ee-8b2f-a9154545ebc6",
    "metadata": {},
    "outputs": [],
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 243,
    "id": "5040173f",
    "metadata": {},
    "outputs": [
@@ -189,7 +189,7 @@
        "tensor([  14,   10,    6, 2148])"
       ]
      },
-     "execution_count": 298,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 244,
    "id": "2a4a9058-ad04-43b9-bf5c-680afb44e35c",
    "metadata": {},
    "outputs": [],
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 245,
    "id": "9727204a-ecff-4e4d-a316-543865d52a31",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
        "tensor([  56, 3160,   13,  244,  526,   50,    3,    3,    3,    1])"
       ]
      },
-     "execution_count": 300,
+     "execution_count": 245,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 246,
    "id": "97eb948c-cfae-47b1-b8ce-bafa358afe65",
    "metadata": {},
    "outputs": [
@@ -248,9 +248,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 20000/20000 [00:03<00:00, 6130.14it/s]\n",
-      "100%|██████████| 5000/5000 [00:00<00:00, 6260.49it/s]\n",
-      "100%|██████████| 25000/25000 [00:03<00:00, 6520.70it/s]\n"
+      "100%|██████████| 20000/20000 [00:03<00:00, 6183.46it/s]\n",
+      "100%|██████████| 5000/5000 [00:00<00:00, 6097.59it/s]\n",
+      "100%|██████████| 25000/25000 [00:03<00:00, 6432.26it/s]\n"
      ]
     }
    ],
@@ -287,10 +287,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 247,
    "id": "a88dd162-8107-4f05-bc8a-2fd313a3b8da",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'x, y = next(data_generator(X_train, y_train, vocabulary[pad_token], batch_size=2))\\nprint(x.shape, y.shape)\\ndisplay(x)\\ndisplay(y)'"
+      ]
+     },
+     "execution_count": 247,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def data_generator(\n",
     "    X: List[torch.tensor], y: List[int], pad_id: int, batch_size: int = 32\n",
@@ -305,19 +316,27 @@
     "        A tuple of tensors (features, labels).\n",
     "    \"\"\"\n",
     "    n_samples = len(X)\n",
-    "    for i in range(0, n_samples, batch_size):\n",
-    "        X_batch = X[i : min(i + batch_size, n_samples)]\n",
-    "        y_batch = y[i : min(i + batch_size, n_samples)]\n",
+    "    n_batches = n_samples // batch_size\n",
+    "    for i in range(n_batches):\n",
+    "        X_batch = X[i * batch_size : (i + 1) * batch_size]\n",
+    "        y_batch = y[i * batch_size : (i + 1) * batch_size]\n",
     "        max_len = max([len(x) for x in X_batch])\n",
+    "        #print(max_len)\n",
+    "        #print(X_batch[0])\n",
     "        X_batch = torch.stack(\n",
-    "            [torch.cat((x, torch.ones(max_len - len(x), dtype=torch.long) * pad_id)) for x in X_batch]\n",
+    "            [torch.cat((torch.tensor([pad_id] * (max_len - len(x))), x)) for x in X_batch]\n",
     "        )\n",
-    "        yield X_batch, torch.tensor(y_batch, dtype=torch.long)"
+    "        yield X_batch, torch.tensor(y_batch, dtype=torch.long)\n",
+    "# print next batch\n",
+    "\"\"\"x, y = next(data_generator(X_train, y_train, vocabulary[pad_token], batch_size=2))\n",
+    "print(x.shape, y.shape)\n",
+    "display(x)\n",
+    "display(y)\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 248,
    "id": "c2e10342-4d6b-45c4-8e05-68ef6375b977",
    "metadata": {},
    "outputs": [],
@@ -350,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 249,
    "id": "4a0e7972",
    "metadata": {},
    "outputs": [],
@@ -414,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 250,
    "id": "0e9053b8-19f3-45b4-a434-2f8cef8a1f64",
    "metadata": {},
    "outputs": [
@@ -424,7 +443,7 @@
        "'cuda:0'"
       ]
      },
-     "execution_count": 305,
+     "execution_count": 250,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 251,
    "id": "46cdc558-249b-4c26-b1e5-fc1c0a78d32d",
    "metadata": {},
    "outputs": [],
@@ -450,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 252,
    "id": "83345c69",
    "metadata": {},
    "outputs": [],
@@ -468,25 +487,35 @@
     "    with torch.no_grad():\n",
     "        y_pred = torch.sigmoid(y_pred)\n",
     "        y_pred = torch.round(y_pred)\n",
-    "        return (y_pred == y_true).sum().item() / len(y_true)"
+    "        return (y_pred == y_true).sum().item() / len(y_true)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 255,
    "id": "11753231",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "=> epoch: 1, loss: 0.6931735277175903\n",
-      "=> epoch: 1, accuracy: 0.5062000155448914\n",
-      "=> epoch: 1, validation loss: 0.6935018301010132\n",
-      "=> epoch: 1, validation accuracy: 0.4895833432674408\n",
-      "=> test loss: 0.6936736106872559\n",
-      "=> test accuracy: 0.4975992441177368\n"
+      "9it [00:03,  2.55it/s]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[255], line 28\u001b[0m\n\u001b[1;32m     26\u001b[0m loss \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m     27\u001b[0m \u001b[39mfor\u001b[39;00m c \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(X_batch\u001b[39m.\u001b[39mshape[\u001b[39m1\u001b[39m]):\n\u001b[0;32m---> 28\u001b[0m     out, hidden \u001b[39m=\u001b[39m model(X_batch[:, c]\u001b[39m.\u001b[39mreshape(X_batch\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m], \u001b[39m1\u001b[39m)\u001b[39m.\u001b[39mfloat(), hidden)\n\u001b[1;32m     29\u001b[0m     l \u001b[39m=\u001b[39m criterion(out, y_batch\u001b[39m.\u001b[39mreshape(X_batch\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m], \u001b[39m1\u001b[39m)\u001b[39m.\u001b[39mfloat())\n\u001b[1;32m     30\u001b[0m     loss \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m l\n",
+      "File \u001b[0;32m~/anaconda3/envs/scia/lib/python3.11/site-packages/torch/nn/modules/module.py:1501\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1496\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1497\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1498\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_pre_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1499\u001b[0m         \u001b[39mor\u001b[39;00m _global_backward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1500\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1501\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[1;32m   1502\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   1503\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
+      "Cell \u001b[0;32mIn[249], line 28\u001b[0m, in \u001b[0;36mRNN.forward\u001b[0;34m(self, x, hidden_state)\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     17\u001b[0m \u001b[39mReturns computed output and tanh(i2h + h2h)\u001b[39;00m\n\u001b[1;32m     18\u001b[0m \u001b[39mInputs\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[39mhidden_state: New hidden state matrix\u001b[39;00m\n\u001b[1;32m     26\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     27\u001b[0m x \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mi2h(x\u001b[39m.\u001b[39mT)\n\u001b[0;32m---> 28\u001b[0m hidden_state \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mh2h(hidden_state)\n\u001b[1;32m     29\u001b[0m \u001b[39m#print(x.shape, hidden_state.shape)\u001b[39;00m\n\u001b[1;32m     30\u001b[0m hidden_state \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mtanh(x \u001b[39m+\u001b[39m hidden_state)\n",
+      "File \u001b[0;32m~/anaconda3/envs/scia/lib/python3.11/site-packages/torch/nn/modules/module.py:1501\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1496\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1497\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1498\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_pre_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1499\u001b[0m         \u001b[39mor\u001b[39;00m _global_backward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1500\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1501\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[1;32m   1502\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   1503\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
+      "File \u001b[0;32m~/anaconda3/envs/scia/lib/python3.11/site-packages/torch/nn/modules/linear.py:114\u001b[0m, in \u001b[0;36mLinear.forward\u001b[0;34m(self, input)\u001b[0m\n\u001b[1;32m    113\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39minput\u001b[39m: Tensor) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Tensor:\n\u001b[0;32m--> 114\u001b[0m     \u001b[39mreturn\u001b[39;00m F\u001b[39m.\u001b[39mlinear(\u001b[39minput\u001b[39m, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mweight, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbias)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -499,10 +528,9 @@
     "best_model = None\n",
     "accuracy_list = []\n",
     "for epoch in range(n_epochs):\n",
-    "    x = train_gen()\n",
     "    epoch_losses = list()\n",
     "    model.train()\n",
-    "    for i, (X_batch, y_batch) in enumerate(x):\n",
+    "    for (X_batch, y_batch) in tqdm(train_gen()):\n",
     "        #print(X_batch.shape, y_batch.shape)\n",
     "        if X_batch.shape[0] != batch_size:\n",
     "            continue\n",
@@ -545,7 +573,7 @@
     "    accuracy_list = []\n",
     "    with torch.no_grad():\n",
     "        valid_losses = list()\n",
-    "        for X_batch, y_batch in valid_gen():\n",
+    "        for X_batch, y_batch in tqdm(valid_gen()):\n",
     "            if X_batch.shape[0] != batch_size:\n",
     "                continue\n",
     "            hidden = model.init_hidden(X_batch.size(0))\n",
@@ -576,7 +604,7 @@
     "accuracy_list = []\n",
     "with torch.no_grad():\n",
     "    test_losses = list()\n",
-    "    for X_batch, y_batch in test_gen():\n",
+    "    for X_batch, y_batch in tqdm(test_gen()):\n",
     "        if X_batch.shape[0] != batch_size:\n",
     "            continue\n",
     "        hidden = best_model.init_hidden(X_batch.size(0))\n",
@@ -610,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": null,
    "id": "a4544dfd-7567-4bea-b484-490b6a7b74e4",
    "metadata": {},
    "outputs": [
@@ -618,7 +646,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=> test accuracy: 0.4975992441177368\n"
+      "=> test accuracy: nan\n"
      ]
     }
    ],
