--- a/NLP2/Lab01/02 using pyTorch RNNs.ipynb
+++ b/NLP2/Lab01/02 using pyTorch RNNs.ipynb
@@ -2019,6 +2019,15 @@
     "\n",
     "print_wrong_prediction(best_model)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "b392e40e",
+   "metadata": {},
+   "source": [
+    "# TODO : expliquer les mauvais examples"
+   ]
   }
  ],
  "metadata": {
