--- a/NLP2/Lab01/01 code your own RNN.ipynb
+++ b/NLP2/Lab01/01 code your own RNN.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "780cf295-7141-43e8-b8b8-199b14071e2a",
    "metadata": {},
@@ -35,6 +36,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ec040734-ff61-4c85-982c-acb2a5bd6d8c",
    "metadata": {},
@@ -81,6 +83,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f309e444-d52d-4f87-8d18-7bb470b7cfcd",
    "metadata": {},
@@ -142,6 +145,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "89386d66-f758-4d87-b786-9d570eb22f2f",
    "metadata": {},
@@ -210,6 +214,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9717208d-2f50-4d16-b170-904beeeb71ad",
    "metadata": {},
@@ -264,6 +269,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "67138763-f848-4dd7-9036-68df352d22a0",
    "metadata": {},
@@ -347,6 +353,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4489d625-f1ad-49ea-8b54-74463e04877f",
    "metadata": {
@@ -416,6 +423,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4c665df6-ff9a-4b66-80fe-8abe62d895c9",
    "metadata": {},
@@ -627,6 +635,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "137dc500-ece2-4efa-8207-758a5f428c26",
    "metadata": {},
@@ -693,7 +702,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
