--- a/NLP2/Lab01/02 using pyTorch RNNs.ipynb
+++ b/NLP2/Lab01/02 using pyTorch RNNs.ipynb
@@ -216,6 +216,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "97cf9568-cd60-4dc6-aaa8-096ee6e0156e",
    "metadata": {},
@@ -226,6 +227,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9bcc80f0-e4e1-4ba3-bbda-582167fb43dc",
    "metadata": {},
@@ -236,6 +238,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "55cecf52-8386-4dc1-9600-0f03554fe082",
    "metadata": {},
@@ -333,6 +336,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5c590a0c-69f0-48b5-9336-f7f33df481af",
    "metadata": {},
@@ -341,6 +345,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "aa17a3c8-640d-41bd-be8d-8976e935a274",
    "metadata": {},
@@ -1080,6 +1085,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cf154e66-6ba3-411e-80c9-6b0eebf122e3",
    "metadata": {},
@@ -2046,7 +2052,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
